k8s/01_default/03_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kong-ingress
  annotations:
    # konghq.com/plugins: kong-oidc,request-id
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /internals/message-broker
        backend:
          serviceName: message-broker
          servicePort: 80
      - path: /echo
        backend:
          serviceName: echo
          servicePort: 80
